--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@ngrx/effects": "^11.0.2",
+    "@ngrx/router-store": "^11.0.2",
+    "@ngrx/store": "^11.0.2",
+    "@ngrx/store-devtools": "^11.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
