--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@auth0/angular-jwt": "^5.0.2",
     "@ngrx/effects": "^11.0.2",
     "@ngrx/router-store": "^11.0.2",
     "@ngrx/store": "^11.0.2",
